<resources>
    <string name="app_name">AppGrabacion</string>
    <string name="preview">Vista previa</string>
    <string name="upload_file">Subir archivo</string>
    <string name="file_type">Tipo de archivo</string>
    <string-array name="categorias_array">
        <item>Recursos</item>
        <item>Asesorías</item>
        <item>Cursos</item>
        <item>Gratuitos</item>
        <item>Prestaciones</item>
    </string-array>
    <!-- res/values/strings.xml -->
    <string name="accept_privacy_plain">
  Acepto el tratamiento de mis datos personales según la política de privacidad.
</string>

    <!-- Descripción accesible para el ImageView de la entidad -->
    <string name="imagen_entidad">Imagen representativa de la entidad</string>
    <string name="imagen_recurso">Imagen representativa del recurso</string>
    <string name="cd_web">Abrir sitio web</string>
    <string name="cd_telefono">Llamar teléfono</string>
    <string name="cd_direccion">Ver dirección</string>
    <string name="cd_email">Enviar email</string>
    <string name="empty_label"></string>
    <string name="section_eva_desc"><![CDATA[
Descubre cómo funciona <font color="#A11991"><b>EVA</b></font>, nuestro innovador <font color="#A11991"><b>sistema de grabación</b></font> en tiempo real y alerta a contactos de confianza. Con <font color="#A11991"><b>EVA</b></font> podrás registrar tus desplazamientos, enviar <font color="#A11991"><b>notificaciones automáticas</b></font> ante emergencias y compartir tu ubicación al instante, garantizando tu seguridad en todo momento.
]]></string>
    <string name="manual_notice"><![CDATA[
Para consultar el <font color="#A11991"><b>manual de usuario de EVA</b></font> es necesario primero <font color="#A11991"><b>registrarse</b></font>  y haber hecho <font color="#A11991"><b>login</b></font> . El equipo de <font color="#A11991"><b>EVA</b></font> promueve totalmente la discreción de las usuarias y sus datos.
]]></string>

</resources>